--- a/mesh/templates/controller/hooks/cleanup-hook.yaml
+++ b/mesh/templates/controller/hooks/cleanup-hook.yaml
@@ -16,8 +16,8 @@ metadata:
     "helm.sh/hook-delete-policy": "hook-succeeded,before-hook-creation"
 
 ---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: traefik-mesh-cleanup-role
   namespace: {{ .Release.Namespace }}
@@ -57,8 +57,8 @@ rules:
       - update
 
 ---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: traefik-mesh-cleanup
   namespace: {{ .Release.Namespace }}
