--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,11 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
           git config --global --add safe.directory /charts
 
+      - name: Copy LICENSE and README.md for packaging
+        run: |
+            cp ./README.md ./hub-agent/README.md
+            cp ./LICENSE ./hub-agent/LICENSE
+
       - name: Get chart verison
         id: chart_version
         run: |
