--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Get chart verison
         id: chart_version
         run: |
-          echo "CHART_VERSION=$(cat mesh/Chart.yaml | awk -F"[ ',]+" '/version:/{print $2}')" >> $GITHUB_OUTPUT
+          echo "CHART_VERSION=$(grep '^version:' mesh/Chart.yaml | cut -c 10-)" >> $GITHUB_OUTPUT
 
       - name: Check if tag exists
         id: tag_exists
